# itext-python-example

./: .gitignore  README.md  init_itextpy_package.py  init_packages.py  init_stubs_package.py  patch_itext_binaries.py  patch_itext_io.py  pyproject.toml  requirements.txt  setup.py  test.py
csharp/: Directory.Packages.props
csharp-dependency-stub/: Program.cs  README.md  _csharp-dependency-stub.csproj
csharp/csharp-dependency-stub/: README.md  _csharp-dependency-stub.csproj
csharp/itext.python.compat/: itext.python.compat.csproj
itext.python.compat/: README.md  itext.python.compat.csproj
itext_python/: __init__.py  download-dlls.py  download-itext-dlls.py
itextpy/: .gitignore  _init_util.py  _util.py  util.py
samples/: README.md  run_samples.ps1  run_samples.sh
samples/sandbox/: .gitignore
samples/sandbox/acroforms/: create_form_field_through_layout.py
samples/sandbox/ai/: README.md  requirements.txt  table_of_contents.py
samples/sandbox/annotations/: add_link_annotation_5.py  move_popup.py
samples/sandbox/events/: page_rotation.py  text_footer.py  watermarking.py
samples/sandbox/images/: multiple_images.py
samples/sandbox/layout/: page_size_and_margins.py  paragraph_text_with_style.py
samples/sandbox/merge/: add_cover_1.py
samples/sandbox/objects/: nested_lists.py
samples/sandbox/pdfa/: pdf_a3.py  pdf_a4.py
samples/sandbox/pdfhtml/: colorblindness.py  parse_html_as_print.py  parse_html_color_blind.py  qr_code_tag.py  (+3 more)
scripts/: hatch_build.py  init_itextpy_package.py  init_packages.py  init_stubs_package.py  patch_itext_binaries.py
(+17 files in other folders)
